opam-version: "2.0"
name: "samplerate"
version: "0.1.4"
maintainer: "Romain Beauxis <toots@rastageeks.org>"
authors: "The Savonet Team <savonet-users@lists.sourceforge.net>"
homepage: "https://github.com/savonet/ocaml-samplerate"
build: [
  ["./bootstrap"] {pinned}
  ["./configure" "--prefix" prefix]
  [make "clean"] {pinned}
  [make]
]
install: [
  [make "install"]
]
depends: [
  "ocaml"
  "ocamlfind" {build}
]
depexts: [
  ["libsamplerate-devel"] {os-distribution = "centos"}
  ["libsamplerate-devel"] {os-distribution = "fedora"}
  ["libsamplerate-devel"] {os-family = "suse"}
  ["libsamplerate-dev"] {os-distribution = "alpine"}
  ["libsamplerate0-dev"] {os-distribution = "debian"}
  ["libsamplerate0-dev"] {os-distribution = "ubuntu"}
  ["libsamplerate"] {os = "macos" & os-distribution = "homebrew"}
]
bug-reports: "https://github.com/savonet/ocaml-samplerate/issues"
dev-repo: "git+https://github.com/savonet/ocaml-samplerate.git"
synopsis:
  "Bindings for the samplerate library which provides functions for changing samplerate of audio data"
